@@ -3,3 +3,4 @@ from Guest import Guest, VirtualDisk, VirtualNetworkInterface, XenGuest, XenDisk
 from FullVirtGuest import FullVirtGuest
 from ParaVirtGuest import ParaVirtGuest
 from DistroManager import DistroInstaller
+from LiveCDInstaller import LiveCDInstaller
